--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+.container {
+    display:flex;
+    flex-shrink: 0;
+    padding: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
 .square {
+    display: flex;
     border: 2px solid black;
+    max-width: 200px;
+    max-height: 200px;
+    min-height: 50px;
+    min-width: 50px;
 }
