Rework grid system with... css grid instead
Flexbox didn't provide the dynamic grid I was looking for. So i had to learn a bit of css grid

--- a/style.css
+++ b/style.css
@@ -1,20 +1,51 @@
-.container {
-    display:flex;
-    flex-shrink: 0;
-    padding: 50px;
-    align-items: center;
+body {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
+
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.title {
+    font-size: 40px;
+}
+
+.size-ctrl {
+    display: flex;
+    gap: 15px;
+}
+
+.size-ctrl .current-size {
+    margin-top: 1%;
+}
+
+:root {
+    --grid-cols: 1;
+    --grid-rows: 1;
+}
+
+.container {
+    display:grid;
+    grid-template-rows: repeat(var(--grid-rows), 1fr);
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
+    width: 900px;
+    height: 900px;
+    margin: 35px;
+    border: 3px groove black;
+}
+
 
 .square {
-    display: flex;
-    border: 2px solid black;
-    max-width: 200px;
-    max-height: 200px;
-    min-height: 50px;
-    min-width: 50px;
+    border: 1px solid black;
 }
 
-.square:hover {
+.hovered {
     background: black;
 }
